Tue Apr 20 12:47:32 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_shm.h:
          Removed empty shmaddr when ACE_WIN32 is set, it is not used in
          ACE. Added empty struct shmid_ds when ACE_LACKS_SHMID_DS_T is
          defined.

        * ace/README:
          Added ACE_LACKS_SHMID_DS_T

Tue Apr 20 06:17:43 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* THANKS:

	  To avoid spam for our dear users we have changed the @ symbol
	  and the dot symbol to be in character format.

Mon Apr 19 14:10:21 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Moved the implementation of ACE_OS::thr_equal() before the first
          placed where it is used in this file. This fixes a warning in the
          Tru64 build.

Mon Apr 19 14:02:31 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_msg.h:
          Instead of defining an empty struct msqid_ds when
          ACE_WIN32 is set, use the new ACE_LACKS_MSQID_DS_T define.

        * ace/README:
          Added ACE_LACKS_MSQID_DS_T description

        * ace/config-win32-common.h:
          Win32 doesn't have the struct msqid_ds, so added ACE_LACKS_MSQID_DS_T

Fri Apr 16 12:34:29 2004  Steve Huston  <shuston@riverace.com>

	* ace/ace.icp:
	* tests/tests.icp: Removed these left-over Visual Age C++ projects.

	* ace/ace_dll64.mak:
	* ace/ace_lib64.mak:
	* apps/JAWS/clients/WebSTONE/src/client/webclient.mak:
	* apps/JAWS/clients/WebSTONE/src/gendata/genrand.mak:
	* apps/JAWS/clients/WebSTONE/src/master/webmaster.mak:
	* examples/C++NPv1/Process_Per_Connection_Logging_Server.mak:
	  Removed these MSVC make files. These are all now generatable via MPC.

Fri Apr 16 09:35:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Default_Constants.h:
          Added ACE_MAX_UDP_PACKET_SIZE

        * ace/RMCast/RMCast_IO_UDP.cpp: